--- a/hw8/q1/crud-mongo-rest-api/package.json
+++ b/hw8/q1/crud-mongo-rest-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "q2",
+  "name": "crud-mongo-rest-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,8 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "mongodb": "^3.3.3",
-    "request": "^2.88.0"
+    "errorhandler": "1.5.1",
+    "express": "4.17.1",
+    "mongodb": "3.3.3",
+    "morgan": "1.9.1"
   }
 }
